force-app/main/default/objects/Schedule_A_Customer_Account__c/Schedule_A_Customer_Account__c.object-meta.xml
<CustomObject>
    <description>Schedule A Customer Account Join Object</description>
    <label>Schedule A Customer Account</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Schedule A Customer Account Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule A Customer Account</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>