force-app/main/default/objects/Schedule_A_Customer_Account__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <referenceTo>IM_Customer_Account__c</referenceTo>
    <relationshipLabel>Schedule A Customer Account</relationshipLabel>
    <relationshipName>Schedule_A_Customer_Account</relationshipName>
    <type>Lookup</type>
</CustomField>