force-app/main/default/objects/Schedule_A_Customer_Account__c/fields/District_Name__c.field-meta.xml
<CustomField>
    <fullName>District_Name__c</fullName>
    <formula>Customer_Account__r.Owning_District_Id__r.District_NAME__c &amp; &quot; - &quot; &amp;  Customer_Account__r.IM_Oracle_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District Name</label>
    <type>Text</type>
</CustomField>