force-app/main/default/objects/Schedule_A_Customer_Account__c/fields/Schedule_A__c.field-meta.xml
<CustomField>
    <fullName>Schedule_A__c</fullName>
    <label>Schedule A</label>
    <referenceTo>Schedule_A__c</referenceTo>
    <relationshipLabel>Schedule A Customer Account</relationshipLabel>
    <relationshipName>Schedule_A_Customer_Account</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>